<resources>
    <string name="app_name">Aplikasi Kalkulator BMI</string>

    <string name="txtMale">Laki-laki</string>
    <string name="txtFemale">Perempuan</string>

    <string name="lbl_bobot">Bobot (Kg) </string>
    <string name="lbl_tinggi">Tinggi (Kg) </string>
    <string name="lbl_umur">Umur (th) </string>

    <string name="btn_hitung_bmi">HITUNG BMI</string>
    <string name="terlalu_sangat_kurus">Terlalu Sangat Kurus</string>
    <string name="sangat_kurus">Sangat Kurus</string>
    <string name="kurus">Kurus</string>
    <string name="normal">Normal</string>
    <string name="gemuk">Gemuk</string>
    <string name="cukup_gemuk">Cukup Gemuk</string>
    <string name="sangat_gemuk">Sangat Gemuk</string>
    <string name="terlalu_sangat_gemuk">Terlalu Sangat Gemuk</string>
</resources>
