<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/pilihGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        
        <RadioButton
            android:id="@+id/pilihMale"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_80sdp"
            android:button="@android:color/transparent"
            android:checked="true"
            android:text="@string/txtMale"
            android:paddingLeft="@dimen/_16sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingRight="@dimen/_16sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:background="@drawable/radio_flat_selector"
            android:textColor="@drawable/radio_text_selector"
            />

        <RadioButton
            android:id="@+id/pilihFemale"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_80sdp"
            android:button="@android:color/transparent"
            android:text="@string/txtFemale"
            android:paddingLeft="@dimen/_16sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingRight="@dimen/_16sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:background="@drawable/radio_flat_selector"
            android:textColor="@drawable/radio_text_selector"
            />

    </RadioGroup>

    <!-- Bobot -->

    <TextView
        android:id="@+id/txtBobot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_bobot"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pilihGender"
        android:layout_marginTop="@dimen/_16sdp"
        />

    <ImageButton
        android:id="@+id/btnMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_remove_black"
        app:layout_constraintBottom_toBottomOf="@+id/edtBobot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtBobot"
        android:onClick="kurangiBobot"
        />

    <EditText
        android:id="@+id/edtBobot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="48sp"
        android:textStyle="bold"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@id/btnPlus"
        app:layout_constraintStart_toEndOf="@id/btnMin"
        app:layout_constraintTop_toBottomOf="@id/txtBobot" />

    <ImageButton
        android:id="@+id/btnPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_add_black"
        app:layout_constraintBottom_toBottomOf="@+id/edtBobot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtBobot"
        android:onClick="tambahBerat"
        />

    <!-- Akhir dari Bobot-->

    <!-- Tinggi -->
    <TextView
        android:id="@+id/lblTinggi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_tinggi"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtBobot"
        android:layout_marginTop="@dimen/_16sdp"
        />

    <ImageButton
        android:id="@+id/btnMinTinggi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_remove_black"
        app:layout_constraintBottom_toBottomOf="@+id/edtTinggi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblTinggi"
        android:onClick="kurangiTinggi"
        />

    <EditText
        android:id="@+id/edtTinggi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="48sp"
        android:textStyle="bold"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@id/btnPlus"
        app:layout_constraintStart_toEndOf="@id/btnMin"
        app:layout_constraintTop_toBottomOf="@id/lblTinggi" />

    <ImageButton
        android:id="@+id/btnPlusTinggi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_add_black"
        app:layout_constraintBottom_toBottomOf="@+id/edtTinggi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblTinggi"
        android:onClick="tambahTinggi"
        />

    <!-- Akhir dari tinggi-->

    <!-- Umur -->
        <TextView
            android:id="@+id/lblUmur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_umur"
            android:gravity="center_horizontal"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtTinggi"
            android:layout_marginTop="@dimen/_16sdp"
            />

        <ImageButton
            android:id="@+id/btnMinUmur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_remove_black"
            app:layout_constraintBottom_toBottomOf="@+id/edtUmur"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblUmur"
            android:onClick="kurangiUmur"
            />

        <EditText
            android:id="@+id/edtUmur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="48sp"
            android:textStyle="bold"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@id/btnPlus"
            app:layout_constraintStart_toEndOf="@id/btnMin"
            app:layout_constraintTop_toBottomOf="@id/lblUmur" />

        <ImageButton
            android:id="@+id/btnPlusUmur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_add_black"
            app:layout_constraintBottom_toBottomOf="@+id/edtUmur"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblUmur"
            android:onClick="tambahUmur"
            />
    <!-- Akhir dari tinggi-->

    <!-- Button Hitung -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_hitung_bmi"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="56dp"
        android:onClick="hitung"
        />

</androidx.constraintlayout.widget.ConstraintLayout>